package debug;

/**
 * Estados que o Debugador pode assumir.
 * 
 * @author Kerlyson
 *
 */
public enum EstadoDebug {

  EXECUTANDO,
  PAUSADO,
  INICIAL;
};
